--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="project">
                     <img src="/images/facescan.jpeg" alt="">
                     <div class="cardDescription">
-                        <h2>FaceDetect Web</h2>
+                        <h3>FaceDetect Web</h3>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/FaceDetect.git">
@@ -66,14 +66,14 @@
                         <img src="/images/c.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h2>The Carlisle Indian School Story</h2>
+                        <h3>The Carlisle Indian School Story</h3>
                         <div>
                             <div id="github">
                                 <a href="http://84925772.nhd.weebly.com/">
                                     http://84925772.nhd.weebly.com/
                                 </a>
                             </div>
-                            <p>A website analyzing Carlisle Indian School's history
+                            <p class="info">A website analyzing Carlisle Indian School's history
                                 and how it was used to practice cultural genocide. 
                                 Datas, Articles, and Interviews are embodied in the site.
                             </p>
@@ -85,7 +85,7 @@
                         <img src="/images/cat.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h2>Find RoboCat</h2>
+                        <h3>Find RoboCat</h3>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
@@ -102,7 +102,7 @@
                 <div class="project">
                     <img src="/images/fish.png" alt="">
                     <div class="cardDescription">
-                        <h2>Hey, That's My Fish!</h2>
+                        <h3>Hey, That's My Fish!</h3>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
