--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="project">
                     <img src="/images/facescan.jpeg" alt="">
                     <div class="cardDescription">
-                        <h3>FaceDetect Web</h3>
+                        <h4>FaceDetect Web</h4>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/FaceDetect.git">
@@ -66,16 +66,14 @@
                         <img src="/images/c.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h3>The Carlisle Indian School Story</h3>
+                        <h4>The Carlisle Indian School Story</h4>
                         <div>
                             <div id="github">
                                 <a href="http://84925772.nhd.weebly.com/">
                                     http://84925772.nhd.weebly.com/
                                 </a>
                             </div>
-                            <p class="info">A website analyzing Carlisle Indian School's history
-                                and how it was used to practice cultural genocide. 
-                                Datas, Articles, and Interviews are embodied in the site.
+                            <p class="info">Utilize web design software to communicate Carlisle Indian School's significance in history.
                             </p>
                         </div>
                     </div>
@@ -85,7 +83,7 @@
                         <img src="/images/cat.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h3>Find RoboCat</h3>
+                        <h4>Find RoboCat</h4>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
@@ -102,7 +100,7 @@
                 <div class="project">
                     <img src="/images/fish.png" alt="">
                     <div class="cardDescription">
-                        <h3>Hey, That's My Fish!</h3>
+                        <h4>Hey, That's My Fish!</h4>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
