--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div class="project">
                     <img src="/images/facescan.jpeg" alt="">
                     <div class="cardDescription">
-                        <h4>FaceDetect Web</h4>
+                        <h4 id="proName">FaceDetect Web</h4>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/FaceDetect.git">
@@ -66,7 +66,7 @@
                         <img src="/images/c.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h4>The Carlisle Indian School Story</h4>
+                        <h4 id="proName">The Carlisle Indian School Story</h4>
                         <div>
                             <div id="github">
                                 <a href="http://84925772.nhd.weebly.com/">
@@ -83,7 +83,7 @@
                         <img src="/images/cat.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h4>Find RoboCat</h4>
+                        <h4 id="proName">Find RoboCat</h4>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
@@ -100,7 +100,7 @@
                 <div class="project">
                     <img src="/images/fish.png" alt="">
                     <div class="cardDescription">
-                        <h4>Hey, That's My Fish!</h4>
+                        <h4 id="proName">Hey, That's My Fish!</h4>
                         <div>
                             <div id="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
