--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Vi Doan</title>
@@ -48,9 +51,9 @@
                 <div class="project">
                     <img src="/images/facescan.jpeg" alt="">
                     <div class="cardDescription">
-                        <h4 id="proName">FaceDetect Web</h4>
+                        <h4 class="proName">FaceDetect Web</h4>
                         <div>
-                            <div id="github">
+                            <div class="github">
                                 <a href="https://github.com/vitdoan/FaceDetect.git">
                                     github.com/vitdoan/FaceDetect.git
                                 </a>
@@ -66,9 +69,9 @@
                         <img src="/images/c.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h4 id="proName">The Carlisle Indian School Story</h4>
+                        <h4 class="proName">The Carlisle Indian School Story</h4>
                         <div>
-                            <div id="github">
+                            <div class="github">
                                 <a href="http://84925772.nhd.weebly.com/">
                                     http://84925772.nhd.weebly.com/
                                 </a>
@@ -83,9 +86,9 @@
                         <img src="/images/cat.png" alt="">
                     </div>
                     <div class="cardDescription">
-                        <h4 id="proName">Find RoboCat</h4>
+                        <h4 class="proName">Find RoboCat</h4>
                         <div>
-                            <div id="github">
+                            <div class="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
                                     github.com/vitdoan/findRobo.git
                                 </a>
@@ -100,9 +103,9 @@
                 <div class="project">
                     <img src="/images/fish.png" alt="">
                     <div class="cardDescription">
-                        <h4 id="proName">Hey, That's My Fish!</h4>
+                        <h4 class="proName">Hey, That's My Fish!</h4>
                         <div>
-                            <div id="github">
+                            <div class="github">
                                 <a href="https://github.com/vitdoan/findRobo.git">
                                     github.com/vitdoan/findRobo.git
                                 </a>
