--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                                     github.com/vitdoan/findRobo.git
                                 </a>
                             </div>
-                            <p>Developed with C language, using pointer and malloc to create an interactive game played between a human user and an AI.
+                            <p>Developed with C language, using pointer and malloc to create an interactive game played between user and an AI.
                             </p>
                         </div>
                     </div>
