update on projects section

--- a/index.html
+++ b/index.html
@@ -46,20 +46,19 @@
             </p>
         </section>
         <section id="section3" class="section">
-            <h1>Personal Projects</h1>
+            <h1>Projects</h1>
             <div class="cards">
                 <div class="project">
-                    <img src="/images/facescan.jpeg" alt="">
+                    <img src="/images/lau.jpeg" alt="">
                     <div class="cardDescription">
-                        <h4 class="proName">FaceDetect Web</h4>
+                        <h4 class="proName">Pass A Link</h4>
                         <div>
                             <div class="github">
-                                <a href="https://github.com/vitdoan/FaceDetect.git">
-                                    github.com/vitdoan/FaceDetect.git
+                                <a href="https://github.com/vitdoan/PassALink">
+                                    github.com/vitdoan/PassALink
                                 </a>
                             </div>
-                            <p>A Full-Stack web application using Claifai API 
-                                to get AI Face Detection Model implemented.
+                            <p>A full-stack web app built with ReactJS that makes use of food item recognition API from Claifai to recognize ingredients and foods in images sent by users.
                             </p>
                         </div>
                     </div>
