add links to contact sections

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <div>
                             <div class="github">
                                 <a href="http://84925772.nhd.weebly.com/">
-                                    http://84925772.nhd.weebly.com/
+                                    84925772.nhd.weebly.com/
                                 </a>
                             </div>
                             <p class="info">Utilize web design software to communicate Carlisle Indian School's significance in history.
@@ -121,15 +121,15 @@
             <div class="social">
                 <div class="contact">
                     <img src="/images/email.png" alt="">
-                    <p>vtdoan@umass.edu</p>
+                    <a>vtdoan@umass.edu</a>
                 </div>
                 <div class="contact">
                     <img src="/images/github.png" alt="">
-                    <p>https://github.com/vitdoan</p>
+                    <a href="https://github.com/vitdoan">github.com/vitdoan</a>
                 </div>
                 <div class="contact">
                     <img src="/images/linkedin.png" alt="">
-                    <p>linkedin.com/in/vitdoan</p>
+                    <a href="https://www.linkedin.com/in/vitdoan/">linkedin.com/in/vitdoan</a>
                 </div>
             </div>
         </section>
