fix styles in contact section

--- a/index.html
+++ b/index.html
@@ -121,15 +121,15 @@
             <div class="social">
                 <div class="contact">
                     <img src="/images/email.png" alt="">
-                    <a>vtdoan@umass.edu</a>
+                    <p>vtdoan@umass.edu</p>
                 </div>
                 <div class="contact">
                     <img src="/images/github.png" alt="">
-                    <a href="https://github.com/vitdoan">github.com/vitdoan</a>
+                    <p>github.com/vitdoan</p>
                 </div>
                 <div class="contact">
                     <img src="/images/linkedin.png" alt="">
-                    <a href="https://www.linkedin.com/in/vitdoan/">linkedin.com/in/vitdoan</a>
+                    <p>linkedin.com/in/vitdoan</p>
                 </div>
             </div>
         </section>
